# Easy_Eai_RV1126_Base_Project

./: .gitignore  CMakeLists.txt  README.md  toolchain-rv1126.cmake
.clangd/index/: main.cpp.1AB86AC45DDCA3D5.idx
scripts/: build.sh  build_and_deploy.sh  deploy.sh
src/: main.cpp
